css/blocks/block-1/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Roboto:wght@700;900&display=swap');

:root {
  --accent-color: #28b5e1;
  --dark-color: #414d55;
  --light-color: #fff;
}

html {
  font-family: 'Roboto', sans-serif;
  font-size: 62.5%;
}

p,
h1 {
  margin-top: 0;
  margin-bottom: 0;
}

body {
  margin: 0;
  color: var(--dark-color);
  font-size: 1.4rem;
  background-color: red;
}

h1 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.6rem;
}

.cart {
  width: 275px;
  height: 180px;
  padding: 3rem;
  border-radius: 1.6rem;
  background-color: var(--light-color);
  display: flex;
  flex-direction: column;
}

.cart__title {
  font-size: 1.6rem;
  line-height: 1.25;
  margin-bottom: 2.2rem;
  font-weight: 700;
}

.cart__items {
  flex-grow: 1;
  overflow: scroll;
  position: relative;
}

.cart__list {
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
}

.cart__footer {
  position: sticky;
  left: 0;
  width: 100%;
  bottom: 0;
  height: 100px;
  display: flex;
  background: linear-gradient(180deg, transparent 0%, var(--light-color) 76%);
}

.cart__more-button {
  margin: auto;
  background: none;
  border: none;
  cursor: pointer;
}

.item {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.item__delete-button {
  cursor: pointer;
  color: var(--accent-color);
  background: none;
  border: none;
}

.item__name {
  font-weight: 900;
  color: var(--accent-color);
  margin-right: 1rem;
  margin-left: 1rem;
}

.item__price {
  white-space: nowrap;
}

